feat: support new id/data event payload for event creation (POST /events) (#269)
* feat: support new id/data event payload for creation

we renamed the fields on responses to save bytes, now we support that for inputs

* fix: accidentally removed camelCase names (facepalm friday)
